# libffi

./: libffi.cabal
examples/: libffi-examples.cabal
