Name:               libffi
cabal-version:      >= 1.8
Version:            0.2
Description:        A binding to libffi, allowing C functions of types only known at runtime to be called from Haskell.
License:            BSD3
License-file:       LICENSE
Copyright:          Remi Turk 2008-2009
Author:             Remi Turk
Maintainer:         remi.turk@gmail.com
Homepage:           http://haskell.org/haskellwiki/Library/libffi
Stability:          alpha
Synopsis:           A binding to libffi
Tested-With:        GHC == 6.10.3
Build-Type:         Simple
Category:           Foreign

source-repository head
  type:                git
  location:            https://github.com/RyanGlScott/libffi

flag static
  description:      Force static linking against @libffi@
  default:          False
  manual:           True

library
  build-depends:      base >= 3 && < 5, bytestring
  exposed-modules:    Foreign.LibFFI,
                      Foreign.LibFFI.Base,
                      Foreign.LibFFI.Types,
                      Foreign.LibFFI.FFITypes,
                      Foreign.LibFFI.Internal
  if flag(static)
    extra-libraries:   :libffi.a
    includes:          ffi.h ffitarget.h
  else
    pkgconfig-depends: libffi
