Name:               libffi
cabal-version:      >= 1.8
Version:            0.2
Description:        A binding to libffi, allowing C functions of types only known at runtime to be called from Haskell.
License:            BSD3
License-file:       LICENSE
Copyright:          Remi Turk 2008-2009
Author:             Remi Turk
Maintainer:         remi.turk@gmail.com
Homepage:           http://haskell.org/haskellwiki/Library/libffi
Stability:          alpha
Synopsis:           A binding to libffi
Tested-With:        GHC == 6.10.3
Build-Type:         Simple
Category:           Foreign

source-repository head
  type:                git
  location:            https://github.com/RyanGlScott/libffi

flag static
  description:      Force static linking against @libffi@
  default:          True

library
  build-depends:      base >= 3 && < 5, bytestring
  exposed-modules:    Foreign.LibFFI,
                      Foreign.LibFFI.Base,
                      Foreign.LibFFI.Types,
                      Foreign.LibFFI.FFITypes,
                      Foreign.LibFFI.Internal
  if flag(static)
    cc-options:        -Wl,-Bstatic -lffi -Wl,-Bdynamic
    includes:          ffi.h ffitarget.h
    if os(darwin)
      -- libffi already gets statically linked on Darwin when building an
      -- executable and -Bstatic isn't supported by the linker, so we disable
      -- the static flag.
      build-depends:  base < 0 && > 0
  else
    pkgconfig-depends: libffi
